src/main/kotlin/com/example/kopringtest/global/error/property/ErrorProperty.kt
package com.example.kopringtest.global.error.property

interface ErrorProperty {
    val status: Int
    val errorMessage: String
}